feat: Add Giskard evaluation framework for Diplomeo Dev chat
- Add test_diplomeo_dev.py: main test script with Giskard wrapper
- Add giskard_raget_evaluation.py: advanced RAGET testset generation
- Add installation files: requirements, setup script, documentation
- Update .gitignore: exclude Giskard results and environment files

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+
+# Giskard results
+giskard_results/
+*.jsonl
+*.html
+
+# Environment variables
+.env
